--- a/mbdyn/manual/input/nodes.tex
+++ b/mbdyn/manual/input/nodes.tex
@@ -481,7 +481,7 @@ The format of each row is
 \begin{itemize}
     \item the label of the node
     \item the value of the node
-    \item the value of the node derivative, when \kw{differential}
+    \item the value of the node derivative, when \kw{differential} (the default)
 \end{itemize}
 
 \paragraph{Private Data.}
