--- a/mbdyn/manual/input/overview.tex
+++ b/mbdyn/manual/input/overview.tex
@@ -210,6 +210,20 @@ to special drivers.
 Chapter~\ref{sec:ELEMENTS} describes the cards related to the input
 of elements.
 
+\subsection{Syntax Highlighting}
+To ease the creation of MBDyn file, two syntax highlighting methods can be used.
+
+The first one is intended to be used with the \htmladdnormallink{Vim}{http://www.vim.org/}
+commandline editor and can be implement by
+adding the \bnt{mbdyn-directory}\kw{/var/mbd.vim} file to the \kw{\textasciitilde{}/.vim/syntax/} folder.
+
+The second method can be used with the \htmladdnormallink{Geany}{http://www.geany.org/}
+GUI text editor for which the methodology to
+add MBDyn syntax highlighting is given at
+\htmladdnormallink{wiki.geany.org/config/mbdyn}{http://wiki.geany.org/config/mbdyn}.
+
+
+
 
 
 \section{Output}
