--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -9,9 +9,8 @@ Pierangelo Masarati     <masarati@aero.polimi.it>
 Paolo Mantegazza        <mantegazza@aero.polimi.it>
 
 
-MBDyn 1.X-Devel
+MBDyn 1.7.1
 	Enhancements:
-		- added screw joint (Mauro Manetti & Marco Morandini)
 		- added ModalBody: body connected to modal node
 		  (Reinhard Resch)
 		- added sprintf function to math parser
@@ -21,6 +20,8 @@ MBDyn 1.X-Devel
 		- added check for symmetric/diagonal mass/stiffness
 		  matrices in modal joint
 		- added initial distance as "current" in distance joint
+		- added "buffer" stream drive and output elements
+		- added skeleton for embedding solver(s)
 	Backward compatibility issues:
 		- "proportional damping" in modal joint replaced by
 		  "single factor damping"
