--- a/mbdyn/NEWS
+++ b/mbdyn/NEWS
@@ -9,6 +9,8 @@ Pierangelo Masarati     <masarati@aero.polimi.it>
 Paolo Mantegazza        <mantegazza@aero.polimi.it>
 
 
+* Apr 25, 2016: release of MBDyn 1.7.1
+
 * Oct 30, 2015: release of MBDyn 1.7.0
 
 * Jun 19, 2015: release of MBDyn 1.6.1
