add private data and initial current to electric motor (Reinhard Resch)

--- a/mbdyn/manual/input/elements.tex
+++ b/mbdyn/manual/input/elements.tex
@@ -497,6 +497,7 @@ of the \kw{abstract} node.
         (\ty{real}) \bnt{dG},
         (\ty{real}) \bnt{dL},
         (\ty{real}) \bnt{dR}
+        [ , \kw{initial current} , \bnt{i_0} ]
 \end{Verbatim}
 %\end{verbatim}
 \begin{subequations}
