--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -28,6 +28,7 @@ MBDyn 1.X-Devel
 		- fixed output of drive callers (Reinhard Resch)
 		- fixed read check for excessive channel number in fixed
 		  step driver (noted by Davide Ivone)
+		- fixed time-dependent output meter
 
 MBDyn 1.7.1
 	Enhancements:
