print the CPU time used for each iteration

--- a/mbdyn/manual/input/problems.tex
+++ b/mbdyn/manual/input/problems.tex
@@ -1302,6 +1302,7 @@ This command requests special output related to the solution phase.
             | \kw{bailout}
             | \kw{matrix condition number}
             | \kw{solver condition number}
+            | \kw{cpu time}
             | \kw{none} \}
 \end{Verbatim}
 %\end{verbatim}
