--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -15,6 +15,8 @@ MBDyn 1.X-Devel
 		- added "raw" variants of buffer drive and output elem
 		- added private data to electric motor (Reinhard Resch)
 		- added initial current to electric motor (Reinhard Resch)
+		- added printing the CPU time used for each iteration
+		  (Reinhard Resch)
 	Backward compatibility issues:
 		- reworked output elements syntax
 	Known issues:
