Added eigenanalysis NetCDF output description, Octave netcdf package description

--- a/mbdyn/manual/input/controldata.tex
+++ b/mbdyn/manual/input/controldata.tex
@@ -324,7 +324,7 @@ This will no longer be an issue when the binary output is implemented;
 in that case, the output format will likely be fixed (float), or
 an optional extended format (double) will be allowed.
 
-\subsection{Output Results}
+\subsection{Output Results}\label{sec:CONTROLDATA:NETCDF}
 This deprecated statement was intended for producing output in formats
 compatible with other software.
 See Appendix~\ref{sec:APP:OUTPUTRESULTS} for a description of the types
